@@ -49,6 +49,7 @@ where XXXXXX is the bug number as listed below.
 382998  xml-socket doesn't work
 383275  massif valgrind: m_xarray.c:162 (ensureSpaceXA): Assertion '!xa->arr' failed
 384584  Callee saved registers listed first for AMD64, X86, and PPC architectures
+384987  VEX register allocator: allocate caller-save registers for short lived vregs
 
 Release 3.13.0 (15 June 2017)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
